More cleaning up and streamlining the code

--- a/exercise-1.ipynb
+++ b/exercise-1.ipynb
@@ -80,11 +80,9 @@
    "source": [
     "import * as crypto from 'crypto';\n",
     "\n",
-    "/* \n",
-    " For an issuer to be able to start issuing Verifiable Credentials, it first needs\n",
-    " to have its own cryptographic key pair. \n",
-    " Issuers will sign the data using their private key. \n",
-    "*/\n",
+    "// For an issuer to be able to start issuing Verifiable Credentials, it first needs\n",
+    "// to have its own cryptographic key pair. \n",
+    "// Issuers will sign the data using their private key. \n",
     "const { publicKey, privateKey } = crypto.generateKeyPairSync('rsa', {\n",
     "    modulusLength: 4096,\n",
     "    publicKeyEncoding: {\n",
@@ -98,17 +96,14 @@
     "    }\n",
     "});\n",
     "\n",
-    "// An issuer will convert the data object into a string\n",
+    "// Create a signature over the hash of the data\n",
     "const message = JSON.stringify(ID_DATA)\n",
-    "\n",
-    "// then create a signature for that data\n",
     "const signer = crypto.createSign('SHA256');\n",
     "signer.update(message);\n",
-    "const signature = signer.sign(privateKey, 'base64')\n",
+    "const signature = signer.sign(privateKey, 'base64');\n",
     "\n",
-    "console.log(message);\n",
-    "console.log(\"----------------------------\")\n",
-    "console.log(signature);"
+    "console.log(\"The signed message is:\", message);\n",
+    "console.log(\"The signature is:\", signature);"
    ]
   },
   {
@@ -134,9 +129,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// verifier now recieves \"message\" and \"signature\" data\n",
-    "// The verifier should also have access to the publicKey of the issuer\n",
-    "// through a Public Key Infrastructure (PKI)\n",
+    "// Teh verifier recieves the \"message\" and the \"signature\".\n",
+    "// We suppose it has a copy of the issuer's public key using some kind of\n",
+    "// Poublic Key Infrastructure (PKI).\n",
     "\n",
     "let verifier = crypto.createVerify('SHA256');\n",
     "verifier.update(message)\n",
@@ -179,30 +174,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// One way to implement selective disclosure is to hash every value, and the \n",
-    "// holder of the credential would share only the values he intends to. \n",
+    "// One way to implement selective disclosure is to hash every value, so the \n",
+    "// holder of the credential can decide which values they want to share.\n",
     "\n",
-    "// issuer will hash the values before signing the data\n",
     "function hashValue(value: string): string {\n",
     "  const hash = crypto.createHash('sha256');\n",
     "  hash.update(value);\n",
     "  return hash.digest('hex');\n",
     "}\n",
     "\n",
+    "// The object to be signed only contains the hashes of the actual data of\n",
+    "// the credential.\n",
     "const ID_DATA_HASHED = {\n",
     "    name: hashValue(ID_DATA['name']),\n",
     "    timeOfBirth: hashValue(ID_DATA['timeOfBirth'].toString()),\n",
     "    profession: hashValue(ID_DATA['profession'])\n",
     "}\n",
     "\n",
-    "// An issuer will convert the data object into a string\n",
+    "// As before, the issuer creates a signature of the hash of the hashed fields.\n",
     "const message = JSON.stringify(ID_DATA_HASHED);\n",
-    "\n",
-    "// then create a signature for that data\n",
     "const signer = crypto.createSign('SHA256');\n",
     "signer.update(message);\n",
-    "\n",
     "const signature = signer.sign(privateKey, 'base64');\n",
+    "\n",
     "console.log(message);\n",
     "console.log(\"----------------------------\");\n",
     "console.log(signature);"
@@ -229,7 +223,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// The holder discloses the value for the name and and profession:\n",
+    "// The holder chooses which fields they want to disclose.\n",
+    "// This data is then sent to the verifier, together with the originally\n",
+    "// signed data.\n",
     "const HOLDER_DISCLOSED_DATA = {\n",
     "    name: ID_DATA['name'],\n",
     "    profession: ID_DATA['profession']\n",
@@ -264,18 +260,13 @@
    "outputs": [],
    "source": [
     "// First the verifier has to check that the signature on the hashes is correct:\n",
-    "\n",
     "let verifier = crypto.createVerify('SHA256');\n",
     "verifier.update(message)\n",
     "console.log(\"Signature verification:\", verifier.verify(publicKey, signature, 'base64'))\n",
     "\n",
     "// Now the verifier can compare the disclosed data with the hashed values in the credential.\n",
     "// If they are equal, and the hash-function is cryptographically secure, the verifier can be covinced that the data is correct.\n",
-    "\n",
-    "// 1. Retrieve data object from JSON data\n",
     "const RETRIEVED_DATA = JSON.parse(message);\n",
-    "\n",
-    "// 2. Compare the hashes of the credential with the hashes of the shared data\n",
     "for (const [key, value] of Object.entries(HOLDER_DISCLOSED_DATA)){\n",
     "    console.log(\"Verifying\", key, \":\", hashValue(value), \"==\", RETRIEVED_DATA[key], \"?\");\n",
     "    if (hashValue(value) != RETRIEVED_DATA[key]) {\n",
@@ -286,7 +277,6 @@
     "// Since we've already verified that the hashed message is valid in the previous code cell\n",
     "// and now we verified that the hashed values are equal to the revealed values, then\n",
     "// we conclude that we trust these revealed data.\n",
-    "\n",
     "console.log(\"Hashed values are equal, so the following is verified:\", HOLDER_DISCLOSED_DATA);"
    ]
   },
@@ -298,7 +288,7 @@
     "### Exercises\n",
     "\n",
     "1. Print the hashes of `hashValue(value)` and from the `RETRIEVED_DATA(key)` and compare them visually\n",
-    "2. Change the disclosed fields and make sure it still rus"
+    "2. Change the disclosed fields and make sure it still runs"
    ]
   },
   {
@@ -337,9 +327,9 @@
     "\n",
     "Right now, the `timeOfBirth` can be guessed by looping over all possible dates to figure out someone's exact date of birth.\n",
     "\n",
-    "- Create a way to hack the `timeOfBirth`. How can this be made faster?\n",
-    "- How would you hack the `name`, or `profession`?\n",
-    "- Reimplement the communication between the holder and verifier modifying the hash function in a way that doesn't make it easy to guess the fields"
+    "1. Create a way to hack the `timeOfBirth`. How can this be made faster?\n",
+    "2. How would you hack the `name`, or `profession`?\n",
+    "3. Reimplement the communication between the holder and verifier modifying the hash function in a way that doesn't make it easy to guess the fields"
    ]
   },
   {
