--- a/exercise-2.ipynb
+++ b/exercise-2.ipynb
@@ -52,15 +52,14 @@
    "outputs": [],
    "source": [
     "// We start by declaring our most important asset which is the E-ID Verifiable Credential we will be working with.\n",
-    "\n",
     "const E_ID_DATA = {\n",
     "    name: \"Jack Sparrow\",\n",
     "    timeOfBirth: new Date(\"1993-08-01T00:00:00\").getTime(),\n",
     "    profession: \"IT Manager\"\n",
     "}\n",
     "\n",
-    "// For this advanced library, we will also need to specify the schema of Credential we're working with.\n",
-    "// Specifying the schema will be useful later to get the correct encoding of each field.\n",
+    "// When using BBS(+), and also for the ZKPs later on, the library needs\n",
+    "// a JSON-Schema to know the types of the fields.\n",
     "const E_ID_SCHEMA = {\n",
     "    type: 'object',\n",
     "    properties: {\n",
@@ -98,37 +97,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import { initializeWasm } from '@docknetwork/crypto-wasm-ts'\n",
-    "await initializeWasm();\n",
-    "\n",
-    "import { BBSKeypair, BBSSignatureParams, BBS_SIGNATURE_PARAMS_LABEL_BYTES,\n",
+    "import { initializeWasm, BBSKeypair, BBSSignatureParams, BBS_SIGNATURE_PARAMS_LABEL_BYTES,\n",
     "        CredentialSchema, BBSCredentialBuilder, BBSCredential, SUBJECT_STR } from '@docknetwork/crypto-wasm-ts'\n",
+    "await initializeWasm();\n",
     "\n",
     "const stringToBytes = (str: string) => Uint8Array.from(Buffer.from(str, \"utf-8\"));\n",
     "\n",
-    "// Generating a keypair once signature parameters are created.\n",
+    "// Generating a keypair for the issuer.\n",
+    "// We suppose that there is a PKI available which lets the verifier\n",
+    "// know the public key of the issuer.\n",
     "const params = BBSSignatureParams.generate(100, BBS_SIGNATURE_PARAMS_LABEL_BYTES);\n",
     "const keypair = BBSKeypair.generate(params, stringToBytes('seed1'));\n",
-    "\n",
     "const secretKey = keypair.secretKey;\n",
     "const publicKey = keypair.publicKey;\n",
     "\n",
-    "// Issuing a credential based on the E-ID data based on the specified schema\n",
-    "\n",
-    "// sets a default structure for a credential with the proof \n",
-    "let credential_schema = CredentialSchema.essential();\n",
-    "// Puts our data schema inside the credential schema\n",
+    "// Issuing a credential based on the E-ID data based on the specified schema,\n",
+    "// and sign it using the BBS+ library.\n",
+    "const credential_schema = CredentialSchema.essential();\n",
     "credential_schema.properties[SUBJECT_STR] = E_ID_SCHEMA\n",
-    "\n",
-    "// Populate the credential with data\n",
     "const builder = new BBSCredentialBuilder();\n",
     "builder.schema = new CredentialSchema(credential_schema);\n",
     "builder.subject = E_ID_DATA\n",
-    "\n",
-    "// sign the credential\n",
     "const verifiableCredential = builder.sign(secretKey);\n",
     "\n",
-    "// Now, the credential is sent to the holder\n",
+    "// This is the data which is sent to the holder.\n",
     "const credentialToSendToHolder = verifiableCredential.toJSON()\n",
     "console.log(\"Credential sent to the holder:\", credentialToSendToHolder)"
    ]
@@ -141,7 +133,7 @@
     "### Questions\n",
     "\n",
     "1. What information do you find in the credential which is sent to the holder? What keywords / algorithms do you recognize?\n",
-    "2. How big in bytes is the proof sent to the holder?"
+    "2. How many bytes is the proof sent to the holder?"
    ]
   },
   {
@@ -162,19 +154,18 @@
    "source": [
     "import { PresentationBuilder } from '@docknetwork/crypto-wasm-ts'\n",
     "\n",
-    "// The holder loads the credential back from JSON\n",
+    "// First the holder verifies that the credential is actually valid.\n",
     "const receivedCredential = BBSCredential.fromJSON(credentialToSendToHolder)\n",
-    "\n",
-    "// They verify that the credential is valid:\n",
     "console.log(\"It is a valid credential:\", verifiableCredential.verify(publicKey).verified)\n",
     "\n",
-    "// The holder wants to prove their name and profession, but keep their birthdate secret\n",
+    "// Then the holder wants to prove their name and profession, but keep their birthdate secret.\n",
     "const presentationBuilder = new PresentationBuilder();\n",
     "presentationBuilder.addCredential(receivedCredential, publicKey)\n",
     "presentationBuilder.markAttributesRevealed(0, new Set<string>(['credentialSubject.name', 'credentialSubject.profession']));\n",
-    "\n",
     "const presentation = presentationBuilder.finalize();\n",
-    "const bbsProofForVerifier = presentation.toJSON()\n",
+    "\n",
+    "// This is the data which is sent to the verifier.\n",
+    "const bbsProofForVerifier = presentation.toJSON();\n",
     "console.log(\"The proof which is sent to the verifier:\", bbsProofForVerifier);"
    ]
   },
@@ -221,9 +212,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Verification of the data the verifier received is as easy as two lines of code!\n",
     "import { Presentation } from '@docknetwork/crypto-wasm-ts'\n",
     "\n",
+    "// Verification of the data the verifier received is as easy as two lines of code!\n",
     "const recreatedPres = Presentation.fromJSON(bbsProofForVerifier)\n",
     "console.log(\"The proof is valid:\", recreatedPres.verify([publicKey]).verified);\n",
     "console.log(\"The shared data is:\", recreatedPres.spec.credentials[0].revealedAttributes);"
@@ -278,11 +269,11 @@
     "const proof2 = presentationBuilder.finalize()[\"proof\"].hex\n",
     "\n",
     "// By generating a proof multiple times, and comparing the proof in each of them,\n",
-    "// we see that they're always different making it difficult (Impossible?!) to correlate the different proofs.\n",
-    "console.log(\"Two created proofs are the same:\", proof1 === proof2);\n",
-    "\n",
-    "// This is a weak proof! In the paper, there's a real mathematical proof to \n",
-    "// ensure that different generated proofs are unlinkable "
+    "// we see that they're always different.\n",
+    "// This is of course a very weak proof, as some of the data might be encrypted or otherwise\n",
+    "// hidden from a simple comparison!\n",
+    "// In the paper, there's a real mathematical proof to ensure that different generated proofs are unlinkable.\n",
+    "console.log(\"Two created proofs are the same:\", proof1 === proof2);"
    ]
   },
   {
@@ -295,10 +286,8 @@
     "// To answer the second point, we look at the data shared with the verifier.\n",
     "// As opposed to the previous exercise where we had to share all the data all the time\n",
     "// even though possibly in a hashed format, in this case, we only share the selected data.\n",
-    "\n",
-    "console.log(\"Revealed attributes:\", presentation.spec.credentials[1][\"revealedAttributes\"]);\n",
-    "\n",
-    "// In this scenario, we see that only the data needed to be revealed is revealed resulting in unlinkability."
+    "// In this scenario, we see that only the data needed to be revealed is sent to the verifier.\n",
+    "console.log(\"Revealed attributes:\", presentation.spec.credentials[1][\"revealedAttributes\"]);"
    ]
   },
   {
@@ -310,8 +299,33 @@
     "\n",
     "## 6. Coding exercise - Simulate an issuer-holder-verifier setup\n",
     "\n",
-    "Divide into two groups of three teams (issuers (min:1), holders(min:2), verifiers(min:1))\n",
-    "and use a chat tool to communicate. "
+    "Divide into two groups of three teams:\n",
+    "\n",
+    "- issuer: 1 team\n",
+    "- holders: at least 2 teams\n",
+    "- verifiers: at least 1 team\n",
+    "\n",
+    "Use your discord room (ex2-1 or ex2-2) to exchange messages.\n",
+    "Copy/paste the JSON representations into the discord room, so that the others can pick them up.\n",
+    "We suppose that the room is your internet connection, and that only the receiver can read the message.\n",
+    "\n",
+    "Here is what you should do:\n",
+    "\n",
+    "0. Make a copy of this notebook and only work with the copy - so you can verify the original if you change things\n",
+    "1. The issuer creates a private/public keypair and sends the public key to the room\n",
+    "2. Each holder creates an `E_ID_DATA` which they send to the issuer\n",
+    "3. The issuer signs the `E_ID_DATA`s and sends them back to the holders\n",
+    "4. Each holder chooses one or more fields to reveal and creates a proof and sends them to one of the verifiers\n",
+    "5. The verifier checks the proof and prints the revealed fields\n",
+    "\n",
+    "Each holder can create a second proof, then the verifiers can see whether they can link the proofs together.\n",
+    "\n",
+    "### Questions\n",
+    "\n",
+    "1. What are the conditions that revealing a field doesn't lead to linkability?\n",
+    "2. How can the verifier be sure that the proof is not stale, meaning that it is not a replayed proof?\n",
+    "3. Can you easily implement this? Unfortunately the docknetwork/crypto-library doesn't have a good API documentation.\n",
+    "   Look at the [PresentationBuilder](https://github.com/docknetwork/crypto-wasm-ts/blob/c32072b85150b6c1febadb29d2b8b7f4dbe7e40b/src/anonymous-credentials/presentation-builder.ts#L120). Which field looks like the best to use for the purpose of avoiding replays?"
    ]
   },
   {
