--- a/exercise-3.ipynb
+++ b/exercise-3.ipynb
@@ -18,7 +18,8 @@
     "2. Creating a range proof using LegoGroth16\n",
     "3. Creating a range proof using Bulletproofs++\n",
     "4. Discussion: are we anonymous and unlinkable now?\n",
-    "5. Coding exercise - Add an accumlator using a negative membership check"
+    "5. Coding exercise - Using the ZKPs\n",
+    "6. Hard Coding Exercise - Revocation test: add an accumlator using a negative membership check"
    ]
   },
   {
@@ -28,7 +29,9 @@
    "source": [
     "---\n",
     "\n",
-    "## 1. Issuer - Setting up and signing a credential"
+    "## 1. Issuer - Setting up and signing a credential\n",
+    "\n",
+    "The first step of the issuer is the same as for the selective disclosure in exercise 2."
    ]
   },
   {
@@ -39,7 +42,6 @@
    "outputs": [],
    "source": [
     "// Defining the schema and one credential.\n",
-    "\n",
     "const E_ID_SCHEMA = {\n",
     "    type: 'object',\n",
     "    properties: {\n",
@@ -50,6 +52,7 @@
     "        weight: {type: 'number', minimum: 40, multipleOf: 0.1}\n",
     "    }\n",
     "}\n",
+    "\n",
     "const E_ID_DATA = {\n",
     "    name: \"Jack Sparrow\",\n",
     "    timeOfBirth: new Date(\"1993-08-01T00:00:00\").getTime(),\n",
@@ -66,38 +69,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Setting up the issuer\n",
-    "\n",
-    "import { initializeWasm } from '@docknetwork/crypto-wasm-ts'\n",
-    "await initializeWasm();\n",
-    "\n",
-    "import { BBSKeypair, BBSSignatureParams, BBS_SIGNATURE_PARAMS_LABEL_BYTES,\n",
+    "import { initializeWasm, BBSKeypair, BBSSignatureParams, BBS_SIGNATURE_PARAMS_LABEL_BYTES,\n",
     "        CredentialSchema, BBSCredentialBuilder, BBSCredential, SUBJECT_STR } from '@docknetwork/crypto-wasm-ts'\n",
-    "\n",
+    "await initializeWasm();\n",
     "const stringToBytes = (str: string) => Uint8Array.from(Buffer.from(str, \"utf-8\"));\n",
     "\n",
-    "// Generating a keypair once signature parameters are created.\n",
+    "// Generating a keypair for the issuer.\n",
+    "// We suppose that there is a PKI available which lets the verifier\n",
+    "// know the public key of the issuer.\n",
     "const params = BBSSignatureParams.generate(100, BBS_SIGNATURE_PARAMS_LABEL_BYTES);\n",
     "const keypair = BBSKeypair.generate(params, stringToBytes('seed1'));\n",
-    "\n",
     "const secretKey = keypair.secretKey;\n",
     "const publicKey = keypair.publicKey;\n",
     "\n",
-    "// Issing a credential based on the E-ID data based on the specified schema\n",
-    "\n",
-    "// default skeleton for the schema\n",
+    "// Issuing a credential based on the E-ID data based on the specified schema,\n",
+    "// and sign it using the BBS+ library.\n",
     "const baseSchema = CredentialSchema.essential();\n",
-    "// we insert our E-ID schema into the data schema position\n",
     "baseSchema.properties[SUBJECT_STR] = E_ID_SCHEMA;  \n",
-    "let eIDSchema = new CredentialSchema(baseSchema);\n",
+    "const eIDSchema = new CredentialSchema(baseSchema);\n",
     "\n",
     "const builder = new BBSCredentialBuilder();\n",
     "builder.schema = eIDSchema;\n",
-    "// assigning data to the schema\n",
     "builder.subject = E_ID_DATA;\n",
-    "\n",
     "const credential = builder.sign(secretKey);\n",
     "\n",
+    "// This is the data which is sent to the holder.\n",
     "const credentialToSendToHolder = credential.toJSON();\n",
     "console.log(\"This data is sent to the holder:\", credentialToSendToHolder);"
    ]
@@ -109,9 +105,9 @@
    "source": [
     "### Exercises\n",
     "\n",
-    "- Change the content of the credential\n",
-    "- Why is the `timeOfBirth` not a string like \"21st of March 1998\"?\n",
-    "- Add a new field to the credential, but don't forget to also add it to the schema"
+    "1. Change the content of the credential\n",
+    "2. Why is the `timeOfBirth` not a string like \"21st of March 1998\"?\n",
+    "3. Add a new field to the credential, but don't forget to also add it to the schema"
    ]
   },
   {
@@ -131,9 +127,11 @@
    "id": "abf5a8f2-bc20-4643-a408-d262dae988b6",
    "metadata": {},
    "source": [
-    "### Issuer\n",
+    "### Verifier\n",
     "\n",
-    "The issuer must create a setup structure with two parts:\n",
+    "We suppose that the holder takes contact with a verifier to get a service from it.\n",
+    "As a first step, the verifier must perform a trusted setup.\n",
+    "It consists of the following parts:\n",
     "\n",
     "- a proving key, used to create the proof, and sent to the holder\n",
     "- a verifying key, used to verify the proof"
@@ -146,10 +144,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// This section establishes a range proof capability based on the LegoGroth16 algorithm\n",
-    "\n",
     "// The verifier is responsible for creating these keys, then sharing only the proving key with \n",
-    "// the credential holder\n",
+    "// the credential holder.\n",
     "import { BoundCheckSnarkSetup, SetupParam } from '@docknetwork/crypto-wasm-ts';\n",
     "const provingKey = BoundCheckSnarkSetup();\n",
     "const snarkProvingKey = provingKey.decompress();\n",
@@ -175,16 +171,21 @@
    "outputs": [],
    "source": [
     "import { PresentationBuilder } from '@docknetwork/crypto-wasm-ts'\n",
+    "\n",
+    "// The holder creates a proof for their height, as requested from the verifier.\n",
+    "// Instead of signing it, they call `finalize` to create the proof.\n",
+    "// The use-case is left as an exercise to the reader.\n",
+    "// My oldest daughter once convinced my youngest daughter that there is a minimal height\n",
+    "// for admission to UNIL, to avoid people signing up their dogs.\n",
     "const builder = new PresentationBuilder();\n",
     "builder.addCredential(credential, publicKey)\n",
     "builder.markAttributesRevealed(0, new Set<string>(['credentialSubject.name', 'credentialSubject.profession']));\n",
     "// Create a proof that `170 <= height < 190`\n",
     "builder.enforceBounds(0, 'credentialSubject.height', 170, 190, 'heightRangeCheck', snarkProvingKey);\n",
-    "\n",
     "const presentation = builder.finalize();\n",
-    "// This is a serialized version (to be sent across an API to the verifier).\n",
-    "const lgProofForVerifier = presentation.toJSON();\n",
     "\n",
+    "// This is a serialized version, to be sent across an API to the verifier.\n",
+    "const lgProofForVerifier = presentation.toJSON();\n",
     "console.log(\"Data sent to verifier:\", lgProofForVerifier);"
    ]
   },
@@ -223,10 +224,9 @@
    "source": [
     "import { Presentation } from '@docknetwork/crypto-wasm-ts'\n",
     "\n",
+    "// Now the verifier can check whether the proof is valid.\n",
     "const predicateParams = new Map([['heightRangeCheck', snarkVerifyingKey]]);\n",
-    "\n",
     "const recreatedPres = Presentation.fromJSON(lgProofForVerifier)\n",
-    "\n",
     "console.log(\"Credential schema and revealed attributes:\", lgProofForVerifier[\"spec\"][\"credentials\"][0]);\n",
     "console.log(\"Verification succeeded:\", recreatedPres.verify([publicKey], undefined, predicateParams).verified);"
    ]
@@ -241,7 +241,7 @@
     "### Exercises\n",
     "\n",
     "1. What happens if you try to create a proof which is not satisfied by the credential? Why?\n",
-    "2. How does the verifier know the bounds check performed? Do they need this information? Why (not)?\n",
+    "2. How does the verifier know the bounds check performed? Does it need this information? Why (not)?\n",
     "3. Change the proof to be on a different field of the credential\n",
     "4. Add a second range proof"
    ]
@@ -282,16 +282,16 @@
    "source": [
     "import { BoundCheckBppParams, PresentationBuilder } from '@docknetwork/crypto-wasm-ts'\n",
     "\n",
+    "// The holder creates a proof for their height, as requested from the verifier.\n",
+    "// Instead of signing it, they call `finalize` to create the proof.\n",
     "const builder = new PresentationBuilder();\n",
     "builder.addCredential(credential, publicKey)\n",
     "builder.markAttributesRevealed(0, new Set<string>(['credentialSubject.name', 'credentialSubject.profession']));\n",
-    "\n",
-    "// The Holder creates his own parameters for the range proof\n",
     "const boundCheckBppParams1 = new BoundCheckBppParams(stringToBytes('Common Reference String')).decompress();\n",
     "builder.enforceBounds(0, 'credentialSubject.height', 170, 190, 'heightRangeCheck', boundCheckBppParams1);\n",
-    "\n",
     "const presentation = builder.finalize();\n",
     "\n",
+    "// This is a serialized version, to be sent across an API to the verifier.\n",
     "const bpProofForVerifier = presentation.toJSON()\n",
     "console.log(\"Data sent to the verifier:\", bpProofForVerifier);"
    ]
@@ -317,11 +317,9 @@
    "source": [
     "import { Presentation } from '@docknetwork/crypto-wasm-ts'\n",
     "\n",
-    "// The verifier creates his own parameters for the range proof\n",
+    "// The verifier now proceeds to check the proof to see if it's valid.\n",
     "const boundCheckBppParams2 = new BoundCheckBppParams(stringToBytes('Common Reference String')).decompress();\n",
-    "\n",
     "const predicateParams1 = new Map([['heightRangeCheck', boundCheckBppParams2]]);\n",
-    "\n",
     "const recreatedPres = Presentation.fromJSON(bpProofForVerifier);\n",
     "console.log(\"Revealed attributes:\", recreatedPres.spec.credentials[0].revealedAttributes);\n",
     "console.log(\"Verification succeeded:\", recreatedPres.verify([publicKey], undefined, predicateParams1).verified);"
@@ -334,10 +332,9 @@
    "source": [
     "### Exercises\n",
     "\n",
-    "1. What happens if you try to create a proof which is not satisfied by the credential? Why?\n",
-    "2. How does the verifier know the bounds check performed? Do they need this information? Why (not)?\n",
-    "3. Change the proof to be on a different field of the credential\n",
-    "4. Add a second range proof"
+    "1. If you do the same exercises as for the LegoGroth16, what is the difference in the code?\n",
+    "2. What other difference do you experience when running the code?\n",
+    "3. Can you find how the verifier can be sure what is proven by the holder?"
    ]
   },
   {
@@ -357,15 +354,40 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e2085e79-4d4a-4ff8-8d04-9690e6571ef7",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## 5. Coding exercise - Using the ZKPs\n",
+    "\n",
+    "Here are some more coding exercises to help you understand the code.\n",
+    "We propose you to copy the exercise into a new notebook, so you always have the original code ready for comparisons.\n",
+    "\n",
+    "1. Create a proof that your age is in a certain range. Why is the age format given like this?\n",
+    "2. Add a new field for the postal code to the credential and to the schema. Now create a proof that you live in the canton de Vaud."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f07ddfce-08a7-40bf-8335-c5ccd2f5987b",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
-    "## 5. Coding exercise - Add an accumlator using a negative membership check\n",
+    "## 6. Hard Coding Exercise - Revocation test: add an accumlator using a negative membership check\n",
     "\n",
-    "Depending on the time, we propose to do the following exercise: \n",
-    "implement a simple validity check of the credential using an accumulator.\n",
+    "Implement a revocation test of the credential using an accumulator.\n",
+    "\n",
+    "This exercise is very hard, as unfortunately the docknetwork/crypto library is lacking a good documentation.\n",
+    "A good starting point is the following test:\n",
+    "[presentation-status-kb-accumulator.spec.ts](https://github.com/docknetwork/crypto-wasm-ts/blob/c32072b85150b6c1febadb29d2b8b7f4dbe7e40b/tests/anonymous-credentials/presentation-status-kb-accumulator.spec.ts#L143).\n",
+    "If you want to dive into this, please keep in mind:\n",
+    "\n",
+    "- The tests in the `crypto-wasm-ts` library are written to work with different proving systems in mind.\n",
+    "  So they have a lots of variables which are filled out by other parts of the tests to make it as universal as possible.\n",
+    "- My preferred way to follow around the code is using VisualStudio, and then use `<CMD+CLICK>` to follow methods, `<CMD+OPTION+LEFT>`\n",
+    "  to go back\n",
     "\n",
     "An accumulator is a cryptographic tool which allows to do (negative) membership proofs.\n",
     "Instead of simply listing a set of numbers, an accumulator compresses these numbers using cryptographic algorithms.\n",
@@ -381,12 +403,30 @@
     "1. The issuer holds the accumulator which contains all revoked elements\n",
     "2. If a credential is revoked, its ID needs to be stored in the accumulator\n",
     "3. The holder creates an additional proof that their ID is not in the accumulator\n",
-    "4. Now when the verifier checks the proof, they can be sure that the credential of the holder is correct\n",
+    "4. When the verifier checks the proof, it can be sure that the credential of the holder hasn't been revoked yet\n",
+    "\n",
+    "From a programming point of view, you have to add the following:\n",
+    "\n",
+    "- Issuer\n",
+    "  - Setup the accumulator using something like [setupKBUniAccumulator](https://github.com/docknetwork/crypto-wasm-ts/blob/c32072b85150b6c1febadb29d2b8b7f4dbe7e40b/tests/anonymous-credentials/utils.ts#L824)\n",
+    "    - the `state` is not necessary\n",
+    "    - instead of adding 100 IDs, start with adding only two possible IDs\n",
+    "  - use `builder.setCredentialStatus` with a non-member check, like [here](https://github.com/docknetwork/crypto-wasm-ts/blob/c32072b85150b6c1febadb29d2b8b7f4dbe7e40b/tests/anonymous-credentials/presentation-status-kb-accumulator.spec.ts#L97)\n",
+    "    - the `registryID` can be any string\n",
+    "    - the `memberValue` needs to be the encoded user-ID from the `schema.encoder.encodeMessage` call\n",
+    "    - the `extra` field with the `blockNo` is optional and can be ignored.\n",
+    "      It is used to transfer additional information from the holder to the verifier.\n",
+    "- Holder\n",
+    "  - call `builder.addAccumInfoForCredStatus` with the values from the issuer. These values are public.\n",
+    "- Verifier\n",
+    "  - add a map with the public key of the accumulator to the call of `recreatedPres.verify`\n",
     "\n",
     "Some questions:\n",
     "\n",
     "- What security did we imply with this setup?\n",
-    "- What can go wrong?"
+    "- What can go wrong?\n",
+    "- How can the verifier be sure that it didn't get a stale proof?\n",
+    "- How can the verifier be sure that the proof hasn't been done on a stale accumulator?"
    ]
   },
   {
