--- a/exercise-4a-calc.ipynb
+++ b/exercise-4a-calc.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7fe47f62-9b21-474a-982a-9dc17efbec52",
    "metadata": {},
    "outputs": [],
@@ -100,10 +100,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e183e475-3bcb-4fe1-9bdf-f74489ecfd3e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time taken to setup BP++: 0.104 seconds\n",
+      "Proof size without any range bounds is: 491 bytes\n",
+      "Time taken to generate proof with no range bounds ~0.042 seconds\n",
+      "Time taken to validate proof with no range bounds ~0.039 seconds\n",
+      "Proof size with one range bounds is: 1798  bytes\n",
+      "Time taken to generate proof with one range bounds ~0.37 seconds\n",
+      "Time taken to validate proof with no range bounds ~0.139 seconds\n",
+      "Proof size with two range bounds is: 3105  bytes\n",
+      "Time taken to generate proof with two range bounds ~0.698 seconds\n",
+      "Time taken to validate proof with no range bounds ~0.245 seconds\n",
+      "Proof size with three range bounds is: 4412  bytes\n",
+      "Time taken to generate proof with three range bounds ~1.031 seconds\n",
+      "Time taken to validate proof with no range bounds ~0.343 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "// Bulletproofs++\n",
     "import { BoundCheckBppParams, PresentationBuilder } from '@docknetwork/crypto-wasm-ts'\n",
@@ -212,10 +232,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5ab68e7b-2e01-46df-a325-0a7648134356",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time taken to setup LG16: 10.51 seconds\n",
+      "Proof size without any range bounds is: 491 bytes\n",
+      "Time taken to generate proof with no range bounds ~0.027 seconds\n",
+      "Time taken to validate proof with no range bounds ~0.032 seconds\n",
+      "Proof size with one range bounds is: 892  bytes\n",
+      "Time taken to generate proof with one range bounds ~6.037 seconds\n",
+      "Time taken to validate proof with no range bounds ~0.05 seconds\n",
+      "Proof size with two range bounds is: 1293  bytes\n",
+      "Time taken to generate proof with two range bounds ~11.994 seconds\n",
+      "Time taken to validate proof with no range bounds ~0.065 seconds\n",
+      "Proof size with three range bounds is: 1694  bytes\n",
+      "Time taken to generate proof with three range bounds ~18.107 seconds\n",
+      "Time taken to validate proof with no range bounds ~0.076 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "// LegoGroth16\n",
     "import { BoundCheckSnarkSetup, SetupParam } from '@docknetwork/crypto-wasm-ts';\n",
@@ -319,10 +359,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5604e8cc-431a-4244-bfa3-b482dd216fce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ \u001b[33m0.104\u001b[39m, \u001b[33m0.042\u001b[39m, \u001b[33m0.37\u001b[39m, \u001b[33m0.698\u001b[39m, \u001b[33m1.031\u001b[39m ] [ \u001b[33m10.51\u001b[39m, \u001b[33m0.027\u001b[39m, \u001b[33m6.037\u001b[39m, \u001b[33m11.994\u001b[39m, \u001b[33m18.107\u001b[39m ] [ \u001b[33m491\u001b[39m, \u001b[33m1798\u001b[39m, \u001b[33m3105\u001b[39m, \u001b[33m4412\u001b[39m ] [ \u001b[33m491\u001b[39m, \u001b[33m892\u001b[39m, \u001b[33m1293\u001b[39m, \u001b[33m1694\u001b[39m ] [ \u001b[33m0.039\u001b[39m, \u001b[33m0.139\u001b[39m, \u001b[33m0.245\u001b[39m, \u001b[33m0.343\u001b[39m ] [ \u001b[33m0.032\u001b[39m, \u001b[33m0.05\u001b[39m, \u001b[33m0.065\u001b[39m, \u001b[33m0.076\u001b[39m ]\n",
+      "\u001b[33m930100\u001b[39m\n"
+     ]
+    }
+   ],
    "source": [
     "console.log(BPProofTimes, LGProofTimes, BPProofSizes, LGProofSizes, BPVerificationTimes, LGVerificationTimes);\n",
     "console.log(provingKey.value.length);"
