Fixing description of Ex3.6 after creating a solution

--- a/exercise-3.ipynb
+++ b/exercise-3.ipynb
@@ -408,16 +408,17 @@
     "From a programming point of view, you have to add the following:\n",
     "\n",
     "- Issuer\n",
-    "  - Setup the accumulator using something like [setupKBUniAccumulator](https://github.com/docknetwork/crypto-wasm-ts/blob/c32072b85150b6c1febadb29d2b8b7f4dbe7e40b/tests/anonymous-credentials/utils.ts#L824)\n",
-    "    - the `state` is not necessary\n",
+    "  - add `baseSchema.properties[STATUS_STR] = CredentialSchema.statusAsJsonSchema();` to the schema setup\n",
+    "  - Setup the accumulator using code found in [setupKBUniAccumulator](https://github.com/docknetwork/crypto-wasm-ts/blob/c32072b85150b6c1febadb29d2b8b7f4dbe7e40b/tests/anonymous-credentials/utils.ts#L824)\n",
+    "    - as you need the `state`, copy/paste the `InMemoryKBUniversalState` from the source file, as it isn't exported.\n",
     "    - instead of adding 100 IDs, start with adding only two possible IDs\n",
     "  - use `builder.setCredentialStatus` with a non-member check, like [here](https://github.com/docknetwork/crypto-wasm-ts/blob/c32072b85150b6c1febadb29d2b8b7f4dbe7e40b/tests/anonymous-credentials/presentation-status-kb-accumulator.spec.ts#L97)\n",
     "    - the `registryID` can be any string\n",
     "    - the `memberValue` needs to be the encoded user-ID from the `schema.encoder.encodeMessage` call\n",
-    "    - the `extra` field with the `blockNo` is optional and can be ignored.\n",
-    "      It is used to transfer additional information from the holder to the verifier.\n",
     "- Holder\n",
     "  - call `builder.addAccumInfoForCredStatus` with the values from the issuer. These values are public.\n",
+    "    - the `extra` field with the `blockNo` is optional and can be ignored.\n",
+    "      It is used to transfer additional information from the holder to the verifier.\n",
     "- Verifier\n",
     "  - add a map with the public key of the accumulator to the call of `recreatedPres.verify`\n",
     "\n",
