--- a/exercise-3.ipynb
+++ b/exercise-3.ipynb
@@ -5,7 +5,7 @@
    "id": "2856edce-b316-4d47-a561-668a4edc2bc0",
    "metadata": {},
    "source": [
-    "# Exercise 3 - Range proofs with ZKPs\n",
+    "# Exercise 3 - Predicate proofs with ZKPs\n",
     "\n",
     "Now that we can do a privacy-preserving unlinkable selective disclosure, we can tackle the next step:\n",
     "removing even more information by only proving the actually relevant information.\n",
