Adding solutions to the exercises

--- a/exercise-1.ipynb
+++ b/exercise-1.ipynb
@@ -5,6 +5,8 @@
    "id": "337c8600-35f1-4f2c-84c9-1c230f589cab",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
     "# Exercise 1 - Signing Simply with RSA\n",
     "\n",
     "This first exercise shows how to prove the validity of a credential using an RSA signature.\n",
@@ -143,7 +145,7 @@
    "id": "37508b45-1e74-469d-a3c4-947a7903cd54",
    "metadata": {},
    "source": [
-    "### Exercises\n",
+    "### Challenges\n",
     "\n",
     "Make sure that the signature fails in the following cases:\n",
     "\n",
@@ -285,7 +287,7 @@
    "id": "b1580444-bdb9-43d0-b12b-9a3afb0f5088",
    "metadata": {},
    "source": [
-    "### Exercises\n",
+    "### Challenges\n",
     "\n",
     "1. Print the hashes of `hashValue(value)` and from the `RETRIEVED_DATA(key)` and compare them visually\n",
     "2. Change the disclosed fields and make sure it still runs"
