--- a/exercise-3.ipynb
+++ b/exercise-3.ipynb
@@ -103,7 +103,7 @@
    "id": "4e504af0-e03f-4529-9928-92514c5927e1",
    "metadata": {},
    "source": [
-    "### Exercises\n",
+    "### Challenges\n",
     "\n",
     "1. Change the content of the credential\n",
     "2. Why is the `timeOfBirth` not a string like \"21st of March 1998\"?\n",
@@ -238,7 +238,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "### Exercises\n",
+    "### Challenges\n",
     "\n",
     "1. What happens if you try to create a proof which is not satisfied by the credential? Why?\n",
     "2. How does the verifier know the bounds check performed? Does it need this information? Why (not)?\n",
@@ -330,7 +330,7 @@
    "id": "4d771f67-edfd-4032-90c8-e44b869578f3",
    "metadata": {},
    "source": [
-    "### Exercises\n",
+    "### Challenges\n",
     "\n",
     "1. If you do the same exercises as for the LegoGroth16, what is the difference in the code?\n",
     "2. What other difference do you experience when running the code?\n",
@@ -410,7 +410,7 @@
     "- Issuer\n",
     "  - add `baseSchema.properties[STATUS_STR] = CredentialSchema.statusAsJsonSchema();` to the schema setup\n",
     "  - Setup the accumulator using code found in [setupKBUniAccumulator](https://github.com/docknetwork/crypto-wasm-ts/blob/c32072b85150b6c1febadb29d2b8b7f4dbe7e40b/tests/anonymous-credentials/utils.ts#L824)\n",
-    "    - as you need the `state`, copy/paste the `InMemoryKBUniversalState` from the source file, as it isn't exported.\n",
+    "    - the `state` is not necessary\n",
     "    - instead of adding 100 IDs, start with adding only two possible IDs\n",
     "  - use `builder.setCredentialStatus` with a non-member check, like [here](https://github.com/docknetwork/crypto-wasm-ts/blob/c32072b85150b6c1febadb29d2b8b7f4dbe7e40b/tests/anonymous-credentials/presentation-status-kb-accumulator.spec.ts#L97)\n",
     "    - the `registryID` can be any string\n",
